# FingerPrint_Project

./: .gitignore  README.md
Fing_Project_Final/Project_Infra/: CMakeLists.txt  README.md
Fing_Project_Final/Project_Infra/alglib/: CMakeLists.txt
Fing_Project_Final/Project_Infra/demo/: CMakeLists.txt  blurr_finger.cpp  clean_finger_patch.cpp  corrupted_clean.cpp  diff_images.cpp  dry_finger.cpp  essai_histo.py  loss_functions.cpp  main.cpp  moist_finger.cpp  test_geom_op.cpp  test_patch.cpp  weak_finger.cpp
Fing_Project_Final/Project_Infra/docs/: CMakeLists.txt  doxyfilerc
Fing_Project_Final/Project_Infra/include/: an_isotrop.hpp  check_convergence.hpp  class_image.hpp  class_patch.hpp  convolution.hpp  deconvolution.hpp  geometrical_op.hpp  image.hpp  interpolation.hpp  kernel.hpp  morphological.hpp  optimization.hpp  patch.hpp  restoration.hpp  structuring_element.hpp
Fing_Project_Final/Project_Infra/src/: CMakeLists.txt  an_isotrop.cpp  blurr_finger.cpp  check_convergence.cpp  class_image.cpp  class_patch.cpp  convolution.cpp  corrupted_clean.cpp  deconvolution.cpp  dry_finger.cpp  geometrical_op.cpp  image.cpp  interpolation.cpp  kernel.cpp  moist_finger.cpp  morphological.cpp  optimization.cpp  patch.cpp  restoration.cpp  structuring_element.cpp  weak_finger.cpp
Fing_Project_Final/Project_Infra/verif/: CMakeLists.txt  test_an_isotrop.cpp  test_convolution.cpp  test_coord.cpp  test_deconvolution.cpp  test_find.cpp  test_grad.cpp  test_morphological.cpp  test_patch.cpp  test_rotation.cpp  test_squares.cpp  test_symmetries.cpp
